# safer-ffi-example

./: .gitignore  .octocov.yml  Cargo.toml  Makefile  README.md  bacon.toml  rust-toolchain.toml
.cursor/rules/: rust-project-rules.mdc
.github/workflows/: rust-ci.yml  security-audit.yml
go_example/: safer_ffi_example.h
go_sample/: main.go  main_test.go  safer_ffi_example.h
src/: lib.rs
